# Production-AI-Control-Plane-and-LLM-Gateway

./: .gitignore  CHANGELOG.md  README.md  implementation_plan.md  model_registry.json  pyproject.toml
examples/: tracing_and_validation.py
src/aicp/: cli.py
src/aicp/gateway/: gateway.py  middleware.py  reliability.py
src/aicp/gateway/providers/: base.py  gemini.py  mock.py  openai.py
src/aicp/observability/: logging.py  metrics.py  tracing.py
src/aicp/pipeline/: engine.py  models.py  registry.py  validation.py
tests/: test_reliability.py
